--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -9,26 +9,30 @@
 .about-container {
   background: rgba(240, 241, 244, 1);
   display: flex;
-  align-items: center;
-  padding: 1%;
-  min-height: 100vh;
+  align-items: stretch;
+  padding: 2% 0;
+  min-height: 50vh;
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
 }
 
 .about-image-container {
   width: 50%;
   padding: 5%;
+
 }
 
 .about-image {
   width: 100%;
   height: auto;
   object-fit: cover;
+  border-radius: 10px;
 }
 
 .about-text-box {
   width: 50%;
   padding: 5%;
-  background: rgba(255, 255, 255, 0.9);
+  margin-right: 2%;
   border-radius: 10px;
 }
 
@@ -36,12 +40,17 @@
   font-family: 'Marcellus', serif;
   color: #000000;
   text-align: left;
-  line-height: 1;
+  line-height: 1.3;
+  font-size: 1.3rem;
 }
 
 .script-text2008 {
   font-family: "Pinyon Script", cursive !important;
   color: #585858 !important;
+  text-align: left !important;
+  display: block;
+  margin-left: 0 !important;
+  margin-right: auto !important;
   font-size: clamp(5vw, 6vw, 6rem) !important;
   text-shadow: 1px 1px 0px #ffffff !important;
 }
