--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -14,6 +14,8 @@
   min-height: 50vh;
   width: 100vw;
   margin-left: calc(-50vw + 50%);
+  position: relative;
+  margin-bottom: 1rem;
 }
 
 .about-image-container {
@@ -35,7 +37,40 @@
   margin-right: 2%;
   border-radius: 10px;
 }
+.about-script {
+  font-family: "Pinyon Script", cursive !important;
+  color: #585858 !important;
+  font-size: clamp(5vw, 6vw, 6rem) !important;
+  text-shadow: 1px 1px 0px #ffffff !important;
+  display: none;
+}
 
+@media (max-width: 768px) {
+  .about-script, scri{
+    display: block;
+    order: 1;
+    font-size: 8rem !important;
+    margin-bottom: -12rem;
+  }
+}
+
+@media (max-width: 428px) {
+  .about-script {
+    display: block;
+    order: 1;
+    font-size: 6rem !important;
+    margin-bottom: -8rem;
+  }
+}
+
+@media (max-width: 390px) {
+  .about-script {
+    display: block;
+    order: 1;
+    font-size: 4rem !important;
+    margin-bottom: -8rem;
+  }
+}
 .about-text {
   font-family: 'Marcellus', serif;
   color: #000000;
@@ -47,13 +82,63 @@
 .script-text2008 {
   font-family: "Pinyon Script", cursive !important;
   color: #585858 !important;
-  text-align: left !important;
-  display: block;
-  margin-left: 0 !important;
-  margin-right: auto !important;
-  font-size: clamp(5vw, 6vw, 6rem) !important;
+  font-size: 8rem !important;
   text-shadow: 1px 1px 0px #ffffff !important;
 }
 
+@media (max-width: 768px) {
+  .script-text2008 {
+    font-size: 4rem !important;
+  }
+}
 
+@media (max-width: 428px) {
+  .script-text2008 {
+    font-size: 3rem !important;
+  }
+}
 
+@media (max-width: 390px) {
+  .script-text2008 {
+    font-size: 3rem !important;
+  }
+}
+
+@media (max-width: 1024px) {
+  .about-container {
+    width: 100vw;
+    margin-left: 0;
+    margin-right: 0;
+    left: 0;
+    right: 0;
+  }
+  
+  .about-image {
+    margin-top: 6rem;
+  }
+}
+
+@media (max-width: 820px) {
+      .about-image {
+    margin-top: 9rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .about-container {
+    flex-direction: column;
+  }
+  
+  .about-image-container {
+    width: 50%;
+    padding-left: 25%;
+    order: 1;
+  }
+  
+  .about-text-box {
+    width: 85%;
+    order: 2;
+    padding-right: 10rem;
+    margin-right: 5rem;
+  }
+}
