--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,75 +6,85 @@
   font-display: swap;
 }
 
+/* Mobile-first: show toggle */
 .nav-toggle {
-    display: none;
-    background: none;
-    border: none;
-    font-size: 1.75rem;
-    color: white;
-    cursor: pointer;
+  display: block;
+  background: none;
+  border: none;
+  font-size: 3rem;
+  color: white;
+  cursor: pointer;
+  z-index: 2000;
+  position: fixed;
+  top: 1rem;
+  right: .5rem;
 }
 
+/* Nav default for mobile: hidden until opened */
 .navitems ul {
-    position: fixed;
-    width: 100%;
-    left: 0;
-    top: 0;
-    z-index: 1000;
-    height: 4.5rem;
-    display: flex;
-    list-style-type: none;
-    justify-content: flex-end;
-    background: #0c0c0c;
-    color: #ffffff;
-    text-decoration: none;
-    font-family: 'Marcellus', serif;
-    font-size: 1.3rem;
-    margin: 0;
-    padding: 0;
-    opacity: 95%;
+  display: none;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 4.5rem;
+  z-index: 2000;
+  list-style-type: none;
+  flex-direction: column;
+  background: #0c0c0c;
+  font-family: 'Marcellus', serif;
+  font-size: 1.3rem;
+  margin: 0;
+  padding: 1rem 0;
+  opacity: 95%;
+}
+
+.navitems.open ul {
+  display: flex;
 }
 
 .navitems li {
-    padding-top: 1.75rem;
-    padding-right: 2rem;
-    margin: 0 1.5rem;
+  padding: 0.5rem 2rem;
+  text-align: center;
 }
 
 .navitems a {
-    color: #ffffff;
-    text-decoration: none;
+  color: #ffffff;
+  text-decoration: none;
 }
 
-.navitems a:hover, .navitems li a:hover {
-    text-decoration: underline;
+.navitems a:hover {
+  text-decoration: underline;
 }
 
-@media (max-width: 960px) {
-    .nav-toggle {
-        display: block;
-        position: fixed;
-        top: 1rem;
-        right: 1rem;
-        z-index: 1001;
-    }
-    
-    .navitems ul {
-        display: none;
-    }
-    
-    .navitems.open ul {
-        display: flex;
-        flex-direction: column;
-        top: 4.5rem;
-        height: auto;
-        padding: 1rem 0;
-    }
-    
-    .navitems.open li {
-        padding: 0.5rem 2rem;
-        text-align: center;
-    }
+/* Desktop mode starts at 960px */
+@media (min-width: 960px) {
+  .nav-toggle {
+    display: none;
+  }
+  .navitems ul {
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    top: 0;
+    height: 4.5rem;
+    justify-content: flex-end;
+    padding: 0;
+    right: .1rem;
+  }
+  .navitems li {
+    padding-top: 1.75rem;
+    padding-right: 2rem;
+    margin: 0 1.5rem;
+    text-align: left;
+  }
 }
 
-
+/* Optional: upscale font & spacing for large screens */
+@media (min-width: 1440px) {
+  .navitems ul {
+    font-size: 1.5rem;
+  }
+  .navitems li {
+    margin: 0 2rem;
+  }
+}
