--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -112,7 +112,7 @@ padding-left: 1rem;
 margin: 0;
 }
   .hero-image-container {
-    flex: 0 0 43%;
+    flex:  0 63%;
     padding-right: 0;
     padding-left: 1.5rem;
     width: auto;
@@ -121,8 +121,8 @@ margin: 0;
 transform: scale(1.4);
   }
   .hero-image {
-    width: 80%;
-    height:auto;
+
+    height:21rem;
     object-fit:contain;
     padding-right: 16rem;
   }
@@ -132,7 +132,7 @@ transform: scale(1.4);
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
+    width: 80%;
     gap: 7rem;
     padding-bottom: 8rem;
     padding-top: 4rem;
@@ -155,8 +155,7 @@ transform: scale(1.4);
   }
 
   .hero-image {
-    width: 100%;
-    height: 40rem;
+    height: 17em;
     object-fit: contain;
   }}
 
@@ -164,7 +163,7 @@ transform: scale(1.4);
   .hero-content {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 80%;
     gap: 7rem;
     padding-bottom: 8rem;
     padding-top: 4rem;
@@ -179,40 +178,43 @@ transform: scale(1.4);
 
   .hero-image-container {
     flex: auto;
-    padding-left: 8rem; /* ← Adds buffer from the right edge 
+    padding-left: 5.5rem; /* ← Adds buffer from the right edge 
     padding-right: 0;
     transform: scale(1.3); /* slightly reduced from 1.4 */
     display: flex;
-    justify-content: flex-end;
+
   }
 
   .hero-image {
-    width: 100%;
-    height: 40rem;
+    width: 95%;
+    height: 17rem;
     object-fit: contain;
+    margin-left: 4px;
   }}
 
 
   @media (max-width: 428px) {
  .hero-content {
    flex-direction: column;
-   width: 35%;
+   width: 32%;
    align-items: center;
-   padding-bottom: 5rem;
+   padding-bottom: 8rem;
+   height: auto;
  }
 
  .hero-text {
    width: 50%;
-   margin-top: 10rem;
-   margin-left: -8rem;
+   margin-top: 14rem;
+   margin-left: -3rem;
    order: 1;
-   font-size: 6rem;
+   font-size: 5rem;
  }
 .hero-image-container {
    order: 2;
-   margin-top: 1px;
    width: 18rem;
-   margin-left: 29.5rem;
+   margin-left: 41.5rem;
+   padding-bottom: 1rem;
+   
  }
 
   .hero-image {
@@ -231,17 +233,16 @@ transform: scale(1.4);
 
  .hero-text {
    width: 50%;
-   margin-top: 8rem;
+   margin-top: 10rem;
    order: 1;
    font-size: 5rem;
-   padding-right: 7rem;
+   margin-left: -4rem;
  }
 
 .hero-image-container {
    order: 2;
-   margin-top: 1px;
    width: 15rem;
-   margin-left: 27.5rem;
+   margin-right:  2.5rem;
  }
   .hero-image {
 
@@ -250,5 +251,6 @@ transform: scale(1.4);
    padding-bottom: 1rem;
  }
 }
+
 
 
