--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -6,26 +6,44 @@
   text-align: left;
 }
 
-.logo-container a {
+.logoHeader-container a {
   display: inline-block;
 }
 
 .logo-img {
-  height: 200px;         
-  width: auto;
-  display: block;
+  height: auto;
+  width: 200px;
+  padding-top: 3rem;
+  transform-origin: top left;
 }
 
-@media (min-width: 960px) {
- 
-  }
-
-/* Smaller logo on mobile */
-@media (max-width: 600px) {
-  .logo-img {
-    height: 120px;
+@media (min-width: 768px) {
+  .logoHeader-container .logo-img {
+    transform: scale(1.3);
   }
 }
-@media (max-width: 1024px) {
-  .logo-img{padding-top: 3rem;
-}}
+
+@media (min-width: 820px) {
+  .logoHeader-container .logo-img {
+    transform: scale(1.5);
+  }
+}
+
+@media (min-width: 950px) {
+  .logoHeader-container .logo-img {
+    transform: scale(1.7);
+  }
+}
+
+@media (min-width: 1024px) {
+  .logoHeader-container .logo-img {
+    transform: scale(1.9);
+  }
+}
+
+@media (min-width: 1440px) {
+  .logoHeader-container .logo-img {
+    transform: scale(2.1);
+  }
+}
+
