--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -7,6 +7,10 @@
   text-align: left;
   
 }
+.hours {
+  white-space: nowrap;
+}
+
 .ft {
   background: #0c0c0c;
   color: #e9e9e9;
@@ -160,7 +164,8 @@
     transform: translateX(-4rem);
   }
   .ft__toTop {
-    padding-bottom: 5rem;
+    bottom: 5rem;
+    
   }
 }
 
