--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -43,6 +43,7 @@
   font-size: clamp(5vw, 6vw, 6rem) !important;
   text-shadow: 1px 1px 0px #ffffff !important;
   display: none;
+  padding-left: 1.5rem;
 }
 
 @media (max-width: 768px) {
